# BIM_Assistent

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  bot.py  main.py  pyproject.toml  upd_token.py
telegram_bot/: config.py  speckle_commits.py  speckle_models.py  speckle_projects.py  utils.py
telegram_bot/ai_tools/: gpt_handler.py
telegram_bot/handlers/: __init__.py  check_rooms_area.py  echo_handler.py  help_handler.py  security_check.py  server_restart.py  server_status.py  start_handler.py  stop_handler.py
telegram_bot/server/: server_restart.py
telegram_bot/speckle/: check_rooms_area.py  projects_handler.py  speckle_commits.py  speckle_config.py  speckle_projects.py
telegram_bot/subs_tool/: subs_handler.py
telegram_bot/toggl/: calendar_add.py  deadline_info.py  stat_by_projects.py  stat_by_user.py  toggl_menu.py
